fix a table-container on mobile side

--- a/src/Components/Owener/sub_part/Event Management/EventManagement.css
+++ b/src/Components/Owener/sub_part/Event Management/EventManagement.css
@@ -467,7 +467,7 @@
   width: 100%;
   border-collapse: collapse;
   background-color: #fff;
-  overflow: hidden;
+  /* overflow: hidden; */
   border-radius: 10px;
 }
 
